--- a/Phys Engine/Phys Engine.vcxproj
+++ b/Phys Engine/Phys Engine.vcxproj
@@ -136,6 +136,10 @@
     <ClCompile Include="BaseLayer.cpp" />
     <ClCompile Include="glad.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders.frag" />
+    <None Include="Shaders.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
