--- a/Phys Engine/Phys Engine.vcxproj.filters
+++ b/Phys Engine/Phys Engine.vcxproj.filters
@@ -22,4 +22,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders.vert">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="Shaders.frag">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
