--- a/Phys Engine/Phys Engine.vcxproj
+++ b/Phys Engine/Phys Engine.vcxproj
@@ -104,12 +104,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\OpenGL\glfw\glfw-3.4.bin.WIN64\include;D:\OpenGL\glad\include;D:\OpenGL\glad\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\OpenGL\glfw\glfw-3.4.bin.WIN64\include;D:\OpenGL\glad\include;D:\OpenGL\glad\src;C:\Users\conne\glad\include;C:\Users\conne\GLFW\glfw-3.4.bin.WIN64\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\OpenGL\glfw\glfw-3.4.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\OpenGL\glfw\glfw-3.4.bin.WIN64\lib-vc2022;C:\Users\conne\GLFW\glfw-3.4.bin.WIN64\lib-vc2022</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;user32.lib;gdi32.lib;shell32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -133,8 +133,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\glad\src\glad.c" />
     <ClCompile Include="BaseLayer.cpp" />
-    <ClCompile Include="glad.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders.frag" />
